--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             height: 100vh;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: start;
             background: #f8f9fa;
         }
         .content {
@@ -24,6 +24,7 @@
         <div class="content">
             <img alt="mobilepros logo" src="/img/logo.png" width="200" height="200">
             <h1 class="display-4">Welcome to Mobile Pros</h1>
+            <p></p>
             <p>Mobile Pros is a community of enterprise mobility industry professionals.
             <p>From admins to directors and everything between! Our members work in private companies, MSPs, vendors and more; there’s no community quite as diverse as ours.
             <p>Looking for like-minded individuals in the industry to discuss implementations, issues, best practices and more?
