--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         .full-height {
             height: 100vh;
             display: flex;
-            justify-content: center;
-            align-items: start;
+            justify-content: start;
+            align-items: center;
             background: #f8f9fa;
         }
         .content {
