--- a/index.html
+++ b/index.html
@@ -10,25 +10,30 @@
         .full-height {
             height: 100vh;
             display: flex;
-            justify-content: start;
+            justify-content: center;
             align-items: center;
             background: #f8f9fa;
         }
         .content {
             text-align: center;
         }
+        .text {
+            text-align: left;
+        }
     </style>
 </head>
 <body>
     <div class="full-height">
         <div class="content">
-            <img alt="mobilepros logo" src="/img/logo.png" width="200" height="200">
+            <img alt="mobilepros logo" src="/img/logo.png" width="100" height="100">
             <h1 class="display-4">Welcome to Mobile Pros</h1>
             <p></p>
-            <p>Mobile Pros is a community of enterprise mobility industry professionals.
-            <p>From admins to directors and everything between! Our members work in private companies, MSPs, vendors and more; there’s no community quite as diverse as ours.
-            <p>Looking for like-minded individuals in the industry to discuss implementations, issues, best practices and more?
-            <p>You’ve come to the right place!
+            <div class="text">
+                <p>Mobile Pros is a community of enterprise mobility industry professionals.
+                <p>From admins to directors and everything between! Our members work in private companies, MSPs, vendors and more; there’s no community quite as diverse as ours.
+                <p>Looking for like-minded individuals in the industry to discuss implementations, issues, best practices and more?
+                <p>You’ve come to the right place!
+            </div>
             <hr>
             <p>Join Mobile Pros</p>
             <a href="https://join.slack.com/t/mobilxperts/shared_invite/enQtMzA2NDQxNjk2OTY1LTdiOWMzY2E5MmNhMjE4NWYwMDcwN2YzZjU0NGFjMzBhOWZiMDA4MjYwMDM4Nzk4YjM3N2VlZTc3ODVlMmFiMTA" class="btn btn-primary">Go to Slack</a>
