--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
             <h1 class="display-4">Welcome to Mobile Pros</h1>
             <p></p>
             <div class="text">
-                <p>Mobile Pros is a community of enterprise mobility industry professionals.
-                <p>From admins to directors and everything between! Our members work in private companies, MSPs, vendors and more; there’s no community quite as diverse as ours.
-                <p>Looking for like-minded individuals in the industry to discuss implementations, issues, best practices and more?
-                <p>You’ve come to the right place!
+                <p>Mobile Pros is a Slack community of enterprise mobility industry professionals passionate about their work and helping others.</p>
+                <p>Looking for like-minded individuals in the industry to discuss implementations, issues, best practices and more? From admins to executives and everything between, our members work in government, private organisations, MSPs, vendors, carriers, OEMs, EMMs, and more; there’s no community quite as diverse as ours.</p>
+                <p>Whether you're looking for help with your mobility estate, or interested in helping others with theirs, you’ve come to the right place.</p>
             </div>
             <hr>
             <p>Join Mobile Pros</p>
