--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
         }
         .content {
             text-align: center;
+            max-width: 1200px;
         }
-        .text {
-            text-align: left;
-        }
+
     </style>
 </head>
 <body>
