--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         }
         .content {
             text-align: center;
+            width: 100%;
             max-width: 1200px;
         }
 
