--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <p>Whether you're looking for help with your mobility estate, or interested in helping others with theirs, you’ve come to the right place.</p>
             </div>
             <p></p>
-            <p>Join Mobile Pros</p>
-            <a href="https://join.slack.com/t/mobilxperts/shared_invite/enQtMzA2NDQxNjk2OTY1LTdiOWMzY2E5MmNhMjE4NWYwMDcwN2YzZjU0NGFjMzBhOWZiMDA4MjYwMDM4Nzk4YjM3N2VlZTc3ODVlMmFiMTA" class="btn btn-primary">Go to Slack</a>
+            <p></p>
+            <a href="https://join.slack.com/t/mobilxperts/shared_invite/enQtMzA2NDQxNjk2OTY1LTdiOWMzY2E5MmNhMjE4NWYwMDcwN2YzZjU0NGFjMzBhOWZiMDA4MjYwMDM4Nzk4YjM3N2VlZTc3ODVlMmFiMTA" class="btn btn-primary">Join us</a>
         </div>
     </div>
     <!-- Latest compiled JavaScript -->
