--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             width: 100%;
             max-width: 1200px;
         }
+        .btn-mp-blue {
+            background-color: #3083ca;
+        }
 
     </style>
 </head>
@@ -35,7 +38,7 @@
             </div>
             <p></p>
             <p></p>
-            <a href="https://join.slack.com/t/mobilxperts/shared_invite/enQtMzA2NDQxNjk2OTY1LTdiOWMzY2E5MmNhMjE4NWYwMDcwN2YzZjU0NGFjMzBhOWZiMDA4MjYwMDM4Nzk4YjM3N2VlZTc3ODVlMmFiMTA" class="btn btn-primary">Join us</a>
+            <a href="https://join.slack.com/t/mobilxperts/shared_invite/enQtMzA2NDQxNjk2OTY1LTdiOWMzY2E5MmNhMjE4NWYwMDcwN2YzZjU0NGFjMzBhOWZiMDA4MjYwMDM4Nzk4YjM3N2VlZTc3ODVlMmFiMTA" class="btn btn-primary btn-mp-blue">Join us</a>
         </div>
     </div>
     <!-- Latest compiled JavaScript -->
