--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         .btn-mp-blue {
             background-color: #3083ca;
         }
+        .text {
+            padding: 40px 0;
+        }
 
     </style>
 </head>
