--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
             <p></p>
             <p></p>
             <a href="https://join.slack.com/t/mobilxperts/shared_invite/enQtMzA2NDQxNjk2OTY1LTdiOWMzY2E5MmNhMjE4NWYwMDcwN2YzZjU0NGFjMzBhOWZiMDA4MjYwMDM4Nzk4YjM3N2VlZTc3ODVlMmFiMTA" class="btn btn-primary btn-mp-blue">Join us</a>
-            <h2 class="display-4">What our members say</h2>
+            <h2 class="">What our members say</h2>
             <div class="row">
                 <div class="col-md-6 text-right quote">
                     <p>"This is an inspirational quote."</p>
                     <p>- Person 1</p>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-6 text-left quote">
                     <p>"This is another inspirational quote."</p>
                     <p>- Person 2</p>
