--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <p></p>
             <p></p>
-            <a href="https://join.slack.com/t/mobilxperts/shared_invite/enQtMzA2NDQxNjk2OTY1LTdiOWMzY2E5MmNhMjE4NWYwMDcwN2YzZjU0NGFjMzBhOWZiMDA4MjYwMDM4Nzk4YjM3N2VlZTc3ODVlMmFiMTA" class="btn btn-primary btn-mp-blue">Join us</a>
+            <a href="https://join.slack.com/t/mobilxperts/shared_invite/zt-2av4pnkmf-3v~8h0B4QXplWCRDUV5W0g" class="btn btn-primary btn-mp-blue">Join us</a>
             <!--h2 class="">What our members say</h2>
             <div class="row">
                 <div class="col-md-6 text-right quote">
