--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <h1 class="display-4">Welcome to Mobile Pros</h1>
             <p></p>
             <div class="text">
-                <p>Mobile Pros is a Slack community of enterprise mobility industry professionals passionate about their work and helping others.</p>
+                <p>Mobile Pros is a Discord community of enterprise mobility industry professionals passionate about their work and helping others.</p>
                 <p>Looking for like-minded individuals in the industry to discuss implementations, issues, best practices and more? From admins to executives and everything between, our members work in government, private organisations, MSPs, vendors, carriers, OEMs, EMMs, and more; there’s no community quite as diverse as ours.</p>
                 <p>Whether you're looking for help with your mobility estate, or interested in helping others with theirs, you’ve come to the right place.</p>
             </div>
             <p></p>
             <p></p>
-            <a href="https://join.slack.com/t/mobilxperts/shared_invite/zt-2av4pnkmf-3v~8h0B4QXplWCRDUV5W0g" class="btn btn-primary btn-mp-blue">Join us</a>
+            <a href="https://discord.gg/KGEpPxnjNu" class="btn btn-primary btn-mp-blue">Join us</a>
             <!--h2 class="">What our members say</h2>
             <div class="row">
                 <div class="col-md-6 text-right quote">
