update to discord

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>Whether you're looking for help with your mobility estate, or interested in helping others with theirs, you’ve come to the right place.</p>
             </div>
             <p></p>
-            <iframe src="https://discord.com/widget?id=803703744377126962&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            <iframe src="https://discord.com/widget?id=803703744377126962&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" title="Discord Widget"></iframe>
             <p></p>
             <a href="https://discord.gg/KGEpPxnjNu" class="btn btn-primary btn-mp-blue">Join us</a>
             <!--h2 class="">What our members say</h2>
