--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             text-align: center;
             width: 100%;
             max-width: 1200px;
+            padding: 20px;
         }
         .btn-mp-blue {
             background-color: #3083ca;
